# ccm

./: .bazelrc  .editorconfig  .eslintrc.json  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE  npm_substitutions.bzl  package-lock.json  package.json  tsconfig.json
.github/workflows/: bump_version.yaml  release.yaml  test.yaml
docs/: README.md  alternatives.md  api.md  benefits.md  getting-started.md  how-it-works.md  typescript.md
examples/cra/: config-overrides.js  package.json
examples/rollup-js/: ccm-plugin.js  package-lock.json  package.json  rollup.config.js
examples/rollup-js/src/: index.jsx
scripts/: build_local_npm.sh
tests/: repositories.bzl
tests/cra/: BUILD.bazel  bootstrap.js  build.test.js  package.json
tests/cra/src/: App.ccm.css  App.js
tests/rollup/: .gitignore  BUILD.bazel  build.test.js  output.golden.css  output.golden.js  package.json  rollup.config.js
tests/rollup/public/: index.html
tests/rollup/src/: app.ccm.css  app.jsx
tools/: workspace-status.sh
tools/create-npm-json/: BUILD.bazel  index.bzl  merge_package.js
