load("@test_rollup_npm_deps//rollup:index.bzl", "rollup")
load("@build_bazel_rules_nodejs//:index.bzl", "generated_file_test")

package(default_testonly = True)

filegroup(
    name = "srcs",
    srcs = glob([
        "src/**/*",
        "public/**/*",
    ]),
)

rollup(
    name = "build",
    outs = [
        "output.css",
        "output.js",
    ],
    args = [
        "-c",
        "rollup.config.js",
        "--output.file",
        "../../$(location :output.js)",
    ],
    chdir = package_name(),
    data = [
        "babel.config.json",
        "rollup.config.js",
        ":srcs",
        "@test_rollup_npm_deps//:node_modules",
        "@test_rollup_npm_deps//@css-components/react",
        "@test_rollup_npm_deps//@css-components/rollup",
    ],
)

generated_file_test(
    name = "diff-js-bundle",
    src = "output.golden.js",
    generated = "output.js",
)

generated_file_test(
    name = "diff-css-bundle",
    src = "output.golden.css",
    generated = "output.css",
)
